Separating the sample from the library

--- a/src/SampleCgiApp/Properties/launchSettings.json
+++ b/src/SampleCgiApp/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "Dotnet.Cgi": {
+    "SampleCgiApp": {
       "commandName": "Project",
       "environmentVariables": {
         "REQUEST_METHOD": "Get"
